# pw64

./: .build.yml  LICENSE  README.md  base64.c  base64.h  config.h.in  main.c  meson.build  password.c  password.h  types.h
.github/workflows/: default.yml  test.yml
tests/: base64.c  func.sh  meson.build
